Day2/Ch04/cicd/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bubble-pool
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: bubble-pool
  sessionAffinity: None
  type: ClusterIP
